--- a/React_inline_styling/task_0/dashboard/src/App/App.css
+++ b/React_inline_styling/task_0/dashboard/src/App/App.css
@@ -1,10 +1,18 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /* font-family: sans-serif; */
+:root {
+    --holberton-red: #e1484c;
 }
 
-:root {
-  --holb-red: #FF0000;
+body {
+    max-width: 90%;
+    margin: 0 auto;
+    position: relative;
+}
+
+div {
+    padding: 2px 8px;
+}
+
+.App {
+    position: relative;
+    min-height: 100vh;
 }
