--- a/React_inline_styling/task_0/dashboard/src/Header/Header.css
+++ b/React_inline_styling/task_0/dashboard/src/Header/Header.css
@@ -1,14 +1,20 @@
+:root {
+    --holberton-red: #e1484c;
+}
+
 .App-header {
-  background-color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  border-bottom: 4px solid var(--holb-red);
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    border-bottom: 3px solid var(--holberton-red);
+    margin-top: 30px;
+}
+
+.App-header img {
+    width: 150px;
 }
 
 .App-header h1 {
-  max-width: fit-content;
-  color: var(--holb-red);
+    margin: auto auto auto 0;
+    color: var(--holberton-red);
 }
